--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,9 +9,11 @@
 }
 
 :root {
+
+  height: auto;
   --sans-serif: 'Inter', sans-serif;
  
-  --color-bg: hsla(222, 87%, 6%, 0.26);
+  --color-bg: hsla(222, 27%, 78%, 0.26);
   --color-text: hsl(0, 0%, 2%);
   --color-title: hsl(357, 49%, 48%);
   --color-highlight: hsl(0, 33%, 64%);
@@ -32,20 +34,23 @@
   --radius-base: 4px;
 }
 
-html,
-body {
-  height: 100%;
-}
+html, body {
+  width:100%;
+  height:100%;
+  margin:0;
+  padding:0;
+  }
 
-body {
-  display: grid;
-  place-content: center;
-  font-family: var(--sans-serif);
-  font-weight: 300;
-  line-height: 1.4;
-  background-color: var(--color-bg);
-  color: var(--color-text);
-}
+  body {
+    display: flex;
+    place-content: center;
+    font-family: var(--sans-serif);
+    font-weight: 300;
+    line-height: 1.4;
+    background-color: var(--color-bg);
+    color: var(--color-text);
+    align-content: space-between;
+  }
 
 label,
 input,
